--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ google-pasta==0.2.0
 grpcio==1.54.2
 h5py==3.8.0
 idna==3.4
+imageio==2.29.0
 ipykernel==6.23.1
 ipython==8.13.2
 ipython-genutils==0.2.0
@@ -44,6 +45,7 @@ jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 keras==2.13.1rc0
+lazy_loader==0.2
 libclang==16.0.0
 Markdown==3.4.3
 MarkupSafe==2.1.2
@@ -54,10 +56,12 @@ nbclient==0.7.4
 nbconvert==7.4.0
 nbformat==5.8.0
 nest-asyncio==1.5.6
+networkx==3.1
 notebook==6.5.4
 notebook_shim==0.2.3
 numpy==1.24.3
 oauthlib==3.2.2
+opencv-python==4.7.0.72
 opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.1
@@ -81,6 +85,7 @@ pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3
+PyWavelets==1.4.1
 PyYAML==6.0
 pyzmq==25.0.2
 requests==2.30.0
@@ -88,6 +93,8 @@ requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rsa==4.9
+scikit-image==0.20.0
+scipy==1.10.1
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
@@ -100,6 +107,7 @@ tensorflow-estimator==2.13.0rc0
 tensorflow-macos==2.13.0rc0
 termcolor==2.3.0
 terminado==0.17.1
+tifffile==2023.4.12
 tinycss2==1.2.1
 tornado==6.3.2
 traitlets==5.9.0
